bxt-macros/tests/ui/pattern-ends-on-double-question.rs
use bxt_macros::pattern;

fn main() {
    pattern!(00 ??);
}
